Interface: prevent editor from overflowing browser window in IE11

--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -37,7 +37,7 @@ html.interface-interface-skeleton__html-container {
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
-	max-width: 100%;
+	width: 100%;
 }
 
 @include editor-left(".interface-interface-skeleton");
